fixed email and t's info

--- a/config.toml
+++ b/config.toml
@@ -91,7 +91,7 @@ logo = "images/ve_logo.png"
 description = "This is meta description"
 author = "Themefisher"
 # Contact Information
-email = "vaccinenationeducation.ucla@gmail.com"
+email = "vaccinationeducation.ucla@gmail.com"
 location = "University of California, Los Angeles"
 
 
