--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -11,7 +11,9 @@ about:
                     historically disadvantaged areas."    
 
       t_title: "Tara Hekmati: Co-Founder and Co-President"          
-      t_content: "Tara Hekmati is a fourth year physiological studies major and Iranian studies minor at UCLA. In addition to her 
-                    educational background, have allowed her to discover her passions for lifelong learning and establishing meaningful connections
-                    with the members of her community. Tara's concern for the lack of credible and consistent vaccine education offered to disadvantaged
-                    members of her community and motivated her to co-create Vaccination Education to solve this problem."
+      t_content: "Tara Hekmati is a fourth year physiological studies major and Iranian studies minor at UCLA. As a physiology major she has had 
+                  early exposure to the world of medicine. In addition to her educational background, Tara's shadowing experiences in ENT and pulmonary 
+                  medicine have allowed her to discover her passions for lifelong learning and establishing meaningful connections with the members of her community.  
+                  Tara's concern for the lack of credible and consistent vaccine education offered to disadvantaged members of her community and her passion for establishing
+                  connections have motivated her to create Vaccination Education to solve this problem. Tara uses her determined and goal-oriented characteristics to effectively
+                  co-lead Vaccination Education."
