updated personal statements

--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -7,7 +7,8 @@ about:
       s_content: "Soroush is a recent graduate of UCLA, majoring in Cognitive Science with a specialization in computing. Currently,
                     Soroush is spending his time conducting research in the Brain Tumor Imaging Laboratory. Outside of the lab, Soroush
                     enjoys swimming and bicycling. As a refugee, Soroush is extremely dedicated to the community, especially about matters
-                    pertaining to public health. As a result, Soroush co-founded Vacciantion Education to promote the use of vaccines in
+                    pertaining to public health. From his experience shadowing an orthopedic surgeon, Soroush has been exposed to to the 
+                    discepency in vaccine statistics. As a result, Soroush co-founded Vacciantion Education to promote the use of vaccines in
                     historically disadvantaged areas."    
 
       t_title: "Tara Hekmati: Co-Founder and Co-President"          
